--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <button id="clearBtn" class="btn danger" type="button">Clear my notes</button>
         </div>
 
-        <p class="hint">
-          GitHub Pages demo mode: notes are saved in <strong>your browser only</strong>.
+        <p class="hint" dir="rtl">
+          הודעה לדוגמא: "שובבי בן X חודשים, אנחנו גרים ב_, ומעוניינים להתחבר לעוד משפחות החלק מ. מספר הטלפון שלי__"
         </p>
       </form>
     </section>
