--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         </div>
       </div>
 
-      <div id="board" class="board" aria-live="polite"></div>
+      <div id="boardViewport" class="boardViewport" aria-live="polite">
+        <div id="boardCanvas" class="boardCanvas"></div>
+      </div>
     </section>
   </main>
 
