--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
         </div>
       </div>
 
-      <div id="boardViewport" class="boardViewport" aria-live="polite">
-        <div id="boardCanvas" class="boardCanvas"></div>
-      </div>
+      <div id="board" class="board" aria-live="polite"></div>
     </section>
   </main>
 
